Configured the project to be able to make JUnits 4 tests, and added few empty tests

--- a/unihub/.settings/org.eclipse.wst.common.component
+++ b/unihub/.settings/org.eclipse.wst.common.component
@@ -6,8 +6,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/users-service/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/users-service/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/search-service/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/users-service/src/test"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/search-service/src/test"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/users-service/src/test/java"/>
         <property name="context-root" value="unihub"/>
         <property name="java-output-path" value="/unihub/target/classes"/>
     </wb-module>
